--- a/project/index.html
+++ b/project/index.html
@@ -3,79 +3,104 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>سامانه رزرو</title>
-    <link rel="icon" type="image/x-icon" href="./assets/img/bus schedule.png" />
-    <!-- External Stylesheets -->
+    <title>سامانه رزرو بلیط اتوبوس</title>
+    <link rel="icon" href="./assets/img/bus_schedule.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <link type="text/css" href="/css/persian-datepicker.css" rel="stylesheet" />
-    <!-- External Scripts -->
-    <script type="text/javascript" src="scripts/jquery-1.6.js"></script>
-    <script
-      type="text/javascript"
-      src="./scripts/persian-datepicker.js"
-    ></script>
+    <link rel="stylesheet" href="/css/persian-datepicker.css" />
+    <meta
+      name="description"
+      content="سامانه رزرو بلیط اتوبوس به شما امکان می‌دهد بلیط‌های خود را به راحتی رزرو کنید."
+    />
+    <meta name="keywords" content="رزرو بلیط, بلیط اتوبوس, سامانه رزرو, سفر" />
+    <meta name="author" content="Your Name" />
+    <script src="scripts/jquery-1.6.js" defer></script>
+    <script src="./scripts/persian-datepicker.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <section>
+    <header>
       <div class="describe">
         <h1>سامانه رزرو بلیط اتوبوس</h1>
         <p>اینجا می‌توانید بلیط اتوبوس خود را به راحتی رزرو کنید.</p>
       </div>
-      <form class="reserve-form" id="reservationForm" novalidate>
-        <h1>رزرو بلیط</h1>
-        <div class="holder">
-          <label for="firstName">نام:</label>
-          <input
-            type="text"
-            name="firstName"
-            id="firstName"
-            required
-            autocomplete="off"
-          />
-        </div>
-        <div class="holder">
-          <label for="lastName">نام خانوادگی:</label>
-          <input
-            type="text"
-            name="lastName"
-            id="lastName"
-            required
-            autocomplete="off"
-          />
-        </div>
-        <div class="holder">
-          <label for="citySelect">مقصد:</label>
-          <select name="city" id="citySelect" required autocomplete="off">
-            <option value="">لطفا یک شهر انتخاب کنید!</option>
-            <option value="tehran">تهران</option>
-            <option value="arak">اراک</option>
-            <option value="bushehr">بوشهر</option>
-          </select>
-        </div>
-        <div class="holder">
-          <label for="carSelect">ماشین:</label>
-          <select name="car" id="carSelect" required autocomplete="off">
-            <option value="">اتوبوس</option>
-            <option value="car1">وولو440قرمز</option>
-            <option value="car2">وولو 334آبی</option>
-            <option value="car3">اسکانیا 112سبز</option>
-          </select>
-        </div>
-        <div class="holder">
-          <label for="Date">تاریخ:</label>
-          <input
-            name="Date"
-            id="datepicker5"
-            type="text"
-            required
-            autocomplete="off"
-          />
-        </div>
-        <button type="submit">رزرو</button>
-      </form>
-    </section>
-
-    <!-- Internal Scripts -->
-    <script src="script.js"></script>
+    </header>
+    <main>
+      <section>
+        <form class="reserve-form" id="reservationForm" novalidate>
+          <h1>رزرو بلیط</h1>
+          <div class="holder">
+            <label for="firstName">نام:</label>
+            <input
+              type="text"
+              name="firstName"
+              id="firstName"
+              required
+              autocomplete="off"
+              aria-label="First Name"
+            />
+          </div>
+          <div class="holder">
+            <label for="lastName">نام خانوادگی:</label>
+            <input
+              type="text"
+              name="lastName"
+              id="lastName"
+              required
+              autocomplete="off"
+              aria-label="Last Name"
+            />
+          </div>
+          <div class="holder">
+            <label for="citySelect">مقصد:</label>
+            <select
+              name="city"
+              id="citySelect"
+              required
+              autocomplete="off"
+              aria-label="City Select"
+            >
+              <option value="">لطفا یک شهر انتخاب کنید!</option>
+              <option value="tehran">تهران</option>
+              <option value="arak">اراک</option>
+              <option value="bushehr">بوشهر</option>
+            </select>
+          </div>
+          <div class="holder">
+            <label for="carSelect">ماشین:</label>
+            <select
+              name="car"
+              id="carSelect"
+              required
+              autocomplete="off"
+              aria-label="Car Select"
+            >
+              <option value="">اتوبوس</option>
+              <option value="car1">وولو440قرمز</option>
+              <option value="car2">وولو 334آبی</option>
+              <option value="car3">اسکانیا 112سبز</option>
+            </select>
+          </div>
+          <div class="holder">
+            <label for="datepicker5">تاریخ:</label>
+            <input
+              name="Date"
+              id="datepicker5"
+              type="text"
+              required
+              autocomplete="off"
+              aria-label="Date"
+            />
+          </div>
+          <button type="submit">رزرو</button>
+        </form>
+      </section>
+      <section>
+        <h2>لیست رزروها</h2>
+        <ul id="reservationList"></ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2024 سامانه رزرو بلیط اتوبوس. تمامی حقوق محفوظ است.</p>
+    </footer>
   </body>
 </html>
